--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,17 +9,9 @@ pool:
 
 steps:
 
-- task: Ansible@0
-  inputs:
-    ansibleInterface: 'remoteMachine'
-    connectionOverSsh: 'SSH - Ansible VM'
-    playbookSourceRemoteMachine: 'agentMachine'
-    playbookRootRemoteMachine: '$(System.DefaultWorkingDirectory)'
-    playbookPathLinkedArtifactOnRemoteMachine: 'users.yml'
-    inventoriesRemoteMachine: 'file'
-    inventoryFileSourceRemoteMachine: 'agentMachine'
-    inventoryFileLinkedArtifactOnRemoteMachine: 'azure_rm.yml'
-    args: '--private-key ~/.ssh/ansible_rsa'
+- task: PowerShell@2
+  displayName: printa
+  script: echo "Hello"
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
