--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,8 @@ steps:
 
 - task: PowerShell@2
   displayName: printa
-  script: echo "Hello"
+  inputs:
+    script:  echo "Hello"
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
