--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,9 @@ steps:
 - task: PowerShell@2
   displayName: printa
   inputs:
+    targetType: inline
     script:  echo "Hello"
+
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
